clean mp-jpa